--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <button id="b_1">HERE!</button>
+    <button id="b_2">THERE!</button>
+    <button id="b_3">BOOM!</button>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> 
+    <script type="text/javascript" src="scripts.js"></script>
+</body>
+</html>
